--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,18 @@
+[[bin]]
+name = "toydb"
+path = "src/main.rs"
+
+[dependencies]
+
+[lib]
+name = "toydb"
+
 [package]
 name = "toy-db-ex"
 description = "A distributed SQL database"
 version = "0.1.0"
 edition = "2021"
 default-run = "toydb"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
+homepage = "https://github.com/lamhai1401/toy-db-ex"
+repository = "https://github.com/lamhai1401/toy-db-ex"
