--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,33 +1,31 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [{
-        "type": "lldb",
-        "request": "launch",
-        "name": "Debug executable 'wss'",
-        "cargo": {
-            "args": [
-                "build",
-                // "--lib",
-                "--bin=wssbin",
-                "--package=wss",
-            ],
-            "filter": {
-                "name": "wssbin",
-                "kind": "bin"
-            },
-        },
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'toydb'",
+      "cargo": {
         "args": [
-            "--url", "https://localhost/"
+          "build",
+          // "--lib",
+          "--bin=toydb",
+          "--package=toy-db-ex"
         ],
-        "cwd": "${workspaceFolder}",
-        // "cwd": "${workspaceRoot}/target/debug/",
-        "stopOnEntry": false,
-        "sourceLanguages": [
-            "rust"
-        ],
-        // "program": "${cargo:program}",
-    }, ]
+        "filter": {
+          "name": "toydb",
+          "kind": "bin"
+        }
+      },
+      "args": ["--url", "https://localhost/"],
+      "cwd": "${workspaceFolder}",
+      // "cwd": "${workspaceRoot}/target/debug/",
+      "stopOnEntry": false,
+      "sourceLanguages": ["rust"]
+      // "program": "${cargo:program}",
+    }
+  ]
 }
